# intcalc

./: .gitignore  Cargo.toml  README.md  SKILL.md
src/: cli.rs  lib.rs  lpr.rs
src/calc/: ele.rs  lpr.rs  mod.rs
tests/: lpr.rs
