[package]
name = "intcalc"
version = "0.1.1"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
chrono = { version = "0.4.44", features = ["serde"] }
clap = { version = "4.6.0", features = ["derive"] }
csv = "1.4.0"
derive_more = { version = "2.1.1", features = ["full"] }
directories-next = "2.0"
reqwest = "0.13.2"
scraper = "0.26.0"
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.50.0", features = ["full"] }
typed-builder = "0.23.2"

[dev-dependencies]
rand = "0.8"
rayon = "1"

[package.metadata.deb]
maintainer = "KimdowEin <zhyimg@163.com>"
# license-file = ["LICENSE", "4"]
depends = "$auto, openssl"
extended-description = "LPR利息计算工具"
section = "utils"
priority = "optional"
